devel
-----

* Add an AQL query kill check during early pruning. Fixes issue #13141.

* Remove a case in which followers were dropped unnecessarily in streaming
  transactions that replicated to the same follower.

* Added new command line options for fine-grained ArangoSearch maintenance
  control:
  - `--arangosearch.commit-threads` - max number of ArangoSearch commit
    threads
  - `--arangosearch.commit-threads-idle` - min number of ArangoSearch
    commit threads
  - `--arangosearch.consolidation-threads` - max number of ArangoSearch
    consolidation threads
  - `--arangosearch.consolidation-threads-idle` - min number of ArangoSearch
    consolidation threads

  Deprecate the following command line options:
  - `--arangosearch.threads`
  - `--arangosearch.threads-limit`

* Turn off `StatisticsWorker` thread on DB servers. 
  This thread was previously only running queries on the local RocksDB 
  instance, but using the cluster-wide collection names. So effectively it 
  did nothing except use a bit of background CPU. In this case it is better 
  to turn off the background thread entirely on the DB servers.

* Avoid the usage of std::regex when constructing date/time string values 
  for log messages. This is a performance optimization only.

* Reimplement coordshort request handler. The new implementation only runs
  two DB queries without any additional requests to other coordinators,
  resulting in reduced load on the cluster. Previously this involved
  requests to all coordinators, where each of them ran two DB queries.

* Fixed initial population of local AgencyCache values after a server restart.
  Previously the local cache was populated from the agency using a commit index
  value of 1, whereas it should have been 0 to get the full agency snapshot.

* Increase background garbage-collection interval for cluster transactions
  from 1 second to 2 seconds. This change should reduce the amount of